--- a/views/dish.handlebars
+++ b/views/dish.handlebars
@@ -27,12 +27,14 @@
       <div class="row">
         <div class="col l6 s12 margin-top-15pc">
           <div class="vl">
-            <h2> {{dish.id}}.{{dish.dish_name}}</h2>
+            <h2> {{recipes.label}}</h2>
           </div>
-          <p> {{description}}</p>
+          {{!-- <p> {{r.}}</p> --}}
           <h5> Ingredients</h5>
           <ul>
-            <li>{{ingredients}}</li>
+            {{#each recipes.ingredients as |ingredientItem|}}
+            {{> ingredientItem}}
+            {{/each}}
           </ul>
         </div>
 
