--- a/views/partials/recipesCard.handlebars
+++ b/views/partials/recipesCard.handlebars
@@ -5,7 +5,7 @@
   <div class="card-content">
     <span class="card-title activator grey-text text-darken-4">{{recipe.label}}<i
         class="material-icons right">more_vert</i></span>
-    <p><a href="/dish">Ingredients</a></p>
+    <a id="{{_links.self.href}}" class="waves-effect waves-light btn white-text ingredient_btn">Ingredients</a>
     {{!-- clicking needs to send recipes._links to /dish
     ?{{recipe._links.self.href}} --}}
   </div>
