--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -32,7 +32,7 @@
         <div>
           <form autocomplete="off">
             <div class="input-field searchbar">
-              <input id="searchdish" class="autocomplete validate" required="" aria-required="true" type="text"
+              <input id="searchdish" required="" aria-required="true" type="text"
                 placeholder="Search">
               <a id="search-dish" class="waves-effect waves-light btn white-text">Search</a>
               <span class="helper-text" data-error="Enter a Dish" data-success=""></span>
@@ -66,7 +66,6 @@
             <li class="collection-header">
               <h6 class="align">Add to <br> Pantry</h6>
             </li>
-
             {{#each shoppingList as |grocerylist|}}
             {{> grocerylist}}
             {{/each}}
