--- a/views/dish.handlebars
+++ b/views/dish.handlebars
@@ -41,7 +41,7 @@
         <div class="col l6 s12 ">
           <img class="salad" src={{recipes.recipe.image}} alt="salad" />
           <p class="center"> Add Ingredients to shopping list</p>
-          <a class="waves-effect waves-light btn center-50pc">add to list</a>
+          <a id="addIngredientBtn" class="waves-effect waves-light btn center-50pc">add to list</a>
         </div>
       </div>
   </div>
