--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -32,8 +32,7 @@
         <div>
           <form autocomplete="off">
             <div class="input-field searchbar">
-              <input id="searchdish" required="" aria-required="true" type="text"
-                placeholder="Search">
+              <input id="searchdish" required="" aria-required="true" type="text" placeholder="Search">
               <a id="search-dish" class="waves-effect waves-light btn white-text">Search</a>
               <span class="helper-text" data-error="Enter a Dish" data-success=""></span>
               </input>
@@ -52,20 +51,28 @@
         <h2 class="white-text std-padding-left ">Top {{dish}} Recipes</h2>
 
         <div id="first_div" class="card-container flex-container  col s12 flow-text">
-          {{#each recipes as |recipesCard|}}
-          {{> recipesCard}}
-          {{/each}}
+          <ul class="collection with-header list">
+            <h2>Shopping List</h2>
+            <li class="collection-item">
+              {{#each recipes as |recipesCard|}}
+              {{> recipesCard}}
+              {{/each}}
+            </li>
+          </ul>
+          <div>
+            <a class="waves-effect waves-light btn center-100pc">VIEW GROCERY LIST</a>
+          </div>
         </div>
 
 
         <div id="second_div" class="col l3 s12">
-            {{#each shoppingList as |grocerylist|}}
-            {{> grocerylist}}
-            {{/each}}
+          {{#each shoppingListItems as |shoppingListItem|}}
+          {{> shoppingListItem}}
+          {{/each}}
 
-       {{#each shoppingList as |pantrylist|}}
-            {{> pantrylist}}
-            {{/each}}
+          {{#each shoppingList as |pantrylist|}}
+          {{> pantrylist}}
+          {{/each}}
         </div>
       </div>
   </main>
