--- a/views/dish.handlebars
+++ b/views/dish.handlebars
@@ -29,7 +29,7 @@
       <div class="row">
         <div class="col l6 s12 margin-top-15pc">
           <div class="vl">
-            <h2> {{recipes.label}}</h2>
+            <h2> {{recipes.recipe.label}}</h2>
           </div>
           {{!-- <p> {{r.}}</p> --}}
           <h5> Ingredients</h5>
