--- a/public/css/style.css
+++ b/public/css/style.css
@@ -263,3 +263,9 @@ main {
     order: 1; /* Go down, bring Box B up */
   }
 }
+
+.card.selected {
+  -webkit-box-shadow: 0px 0px 20px 5px rgb(232, 72, 48,0.8);
+  -moz-box-shadow: 0px 0px 20px 10px rgb(232, 72, 48);
+  box-shadow: 0px 0px 20px 6px rgba(rgb(232, 72, 48));
+}
