--- a/views/shoppingpage.handlebars
+++ b/views/shoppingpage.handlebars
@@ -66,8 +66,8 @@
               <div>{{this.name}}</div>
               <div>{{this.quantity}}</div>
               <div>{{this.measure}}</div> <a href="#!" class="secondary-content"><i class="material-icons"
-                  data-amount={{this.quantity}} data-id={{this.ingredient_id}} id="add">add_circle</i><i
-                  class="material-icons" data-amount={{this.quantity}} data-id={{this.ingredient_id}}
+                  data-amount={{this.quantity}} data-id={{this.id}} id="add">add_circle</i><i
+                  class="material-icons" data-amount={{this.quantity}} data-id={{this.id}}
                   id="delete">delete</i></a>
             </li>
             {{/each}}
